--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -15,6 +15,8 @@
         {% block style %}{% endblock %}
         {% include 'style/queries.css' %}
     </style>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+    crossorigin=""/>
     <link rel="shortcut icon" type="image/png" href="{% static 'icons/activity.png' %}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
