--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -356,6 +356,7 @@ select:focus, select:hover {
     margin-bottom: 15px;
     font-weight: bold;
     font-size: 22px;
+    box-shadow: 0 0 5px lightgray;
 }
 
 .competitive .left {
@@ -405,6 +406,7 @@ select:focus, select:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: 0 0 5px lightgray;
 }
 
 .button-like img {
@@ -585,6 +587,4 @@ select:focus, select:hover {
 .errorlist {
     color: yellow;
 }
-
-
 
