--- a/multiplayer/templates/css/match.css
+++ b/multiplayer/templates/css/match.css
@@ -14,7 +14,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
 
 .member-grid table {
@@ -65,7 +65,7 @@ td {
 }
 .match-chat {
     position: absolute;
-    top: 0;
+    top: 50px;
     left: 0;
     right: 0;
     bottom: 30%;
