--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -6,9 +6,12 @@
 {% block title %}{{ room.target }}-{% trans "Chat" %}{% endblock %}
 
 {% block content %}
-<div id="chat-window-{{ room.id }}" style="width: 100%; height: 100%;">
-    {% include 'chat/chat_window.html' %}
+<div style="position: absolute; top: 50px; left: 0; right: 0; bottom: 30px;">
+    <div id="chat-window-{{ room.id }}" style="width: 100%; height: 100%;">
+        {% include 'chat/chat_window.html' %}
+    </div>
 </div>
+
 
 {% endblock %}
 
