--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -32,7 +32,7 @@
     {% endblock %}
 </script>
 <div class="content">
-    <div id="inner-div" style='position: absolute; top: 0px; right: 0; left: 0; min-height: 100vh;'>
+    <div id="inner-div" style='position: relative; top: 0px; right: 0; left: 0; min-height: 100vh;'>
         <div style="height: 50px"></div>
         {% block content %}
         {% endblock %}
@@ -42,6 +42,7 @@
         </div>
     </div>
 </div>
+
 {% if messages %}
     {% for message in messages %}
         <div class="django-message" id="django-message">
