--- a/activity/templates/activity/detail.html
+++ b/activity/templates/activity/detail.html
@@ -72,7 +72,7 @@
 </div>
    <div id="input-window">
        <h2>{% trans 'Standortmarkierung' %}</h2>
-    {% trans "Wie heißt der Ort, an dem Sie sich befinden? Markieren Sie bitte nur in " %}{{ chosen_component }}.<br>
+    {% trans "Wie heißt der Ort, an dem Sie sich befinden?" %}<br>
     <input type="text" id='input'><br>
     <button id="send">{% trans 'Senden' %}</button><button id="cancel">{% trans 'Abbrechen' %}</button>
 </div>
