--- a/multiplayer/templates/multiplayer/game.html
+++ b/multiplayer/templates/multiplayer/game.html
@@ -88,6 +88,9 @@
     {% elif name == 'Poker' %}
         {% include 'javascript/poker.js' %}
     {% endif %}
+    window.addEventListener('load', function() {
+        document.getElementById('footer').remove();
+    });
 {% endwith %}
 {% endblock %}
 
