--- a/account/templates/style/content.css
+++ b/account/templates/style/content.css
@@ -4,8 +4,7 @@ html {
 }
 
 body {
-    height: 100vh;
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -28,16 +27,13 @@ body {
 }
 
 .footer {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
+    width: 100%;
     font-size: 12px;
-    text-align: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    margin-top: 5px;
     color: white;
     border-top: 1px solid gray;
+    text-align: center;
 }
 
 .footer a {
