--- a/account/templates/style/queries.css
+++ b/account/templates/style/queries.css
@@ -23,9 +23,9 @@
         display: none;
     }
     .activity-horizontal-list {
-        max-height: 180px;
+        max-height: 200px;
         overflow-y: scroll;
-        border: 1px solid black;
+        border: 2px solid gray;
         border-radius: 10px;
         margin-bottom: 5px;
     }
