--- a/account/templates/style/topmenu.css
+++ b/account/templates/style/topmenu.css
@@ -5,7 +5,7 @@
     right: 0;
     height: 40px;
     color: #ababab;
-    background-color: #ae3635;
+    background-color: beige;
     text-decoration: none;
     font-size: 32px;
     font-family: "Arial", "Verdana", "Helvectica";
