--- a/account/templates/account/sidemenu.html
+++ b/account/templates/account/sidemenu.html
@@ -19,7 +19,7 @@
         {% for notification in notifications %}
         {% with notification_id=notification.id %}
             <div class="alert" id="notification-{{ notification_id }}">
-                <a class="notification-url" onclick="removeNotification({{ notification_id }}, '{{ notification.get_absolute_url }}');">{{ notification }}</a>
+                <a class="notification-url" onclick="removeNotification({{ notification_id }}, '{{ notification.get_absolute_url }}');">{{ notification }} <span style="font-size: 10px">({{ notification.timestamp|timesince }})</span></a>
                 <div class="closebtn-container" onclick="removeNotification({{ notification_id }});">
                     <div class="closebtn">&times;</div>
                 </div>
